microservices/kube-manual/book-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
spec:
  replicas: 2 # cantidad PODS que queremos en nuestro deployment
  selector:
    matchLabels:
      app: hello-v1
  strategy: {}
  template: # Aqui se define el template que va usar nuestros PODS
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
        - name: ms-book
          image: yahyrparedes/ms-book
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "500m"
