microservices/kube-manual/book-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
#  ingressClassName: ingress-nginx
  rules:
    - host: "v1.book.local"
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: hello-v1-svc
                port:
                  number: 80

#    - host: v2.peladonerd.local
#      http:
#        paths:
#          - path: /
#            pathType: Exact
#            backend:
#              service:
#                name: hello-v2-svc
#                port:
#                  number: 80
